Time: 6 ms (26.80%), Space: 52.4 MB (14.64%) - LeetHub